--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,12 @@ img {
   padding: 0 15px;
   margin: 0 auto;
 }
+
+.header-content {
+  display: flex;
+}
+
 .header {
-  /* border-bottom: 1px solid #e7e9fc */
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -52,6 +56,7 @@ img {
   display: flex;
   align-items: center;
   margin-right: 76px;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .raleway {
@@ -136,7 +141,7 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
-  bottom: none;
+  border: none;
   border-radius: 4px;
 }
 
@@ -179,6 +184,7 @@ img {
 }
 
 .section-our-team {
+  padding: 120px 0;
   background-color: #f4f4fd;
 }
 
@@ -191,6 +197,7 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   padding: 120px 0;
+  margin-bottom: 72px;
 }
 
 .section-our-team-list {
@@ -201,6 +208,7 @@ img {
 
 .section-our-team-item {
   background: #fff;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .section-our-team-photo {
@@ -218,7 +226,7 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-bottom: 72px;
+  margin-bottom: 8px;
 }
 
 .section-our-team-paragraph {
@@ -232,6 +240,7 @@ img {
 .section-portfolio {
   background-color: #fff;
   padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .section-portfolio-header {
