--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,17 @@ img {
   padding: 120px 0;
 }
 
-.section-content-name {
-  margin-bottom: 8px;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .section-content-list {
@@ -166,6 +175,7 @@ img {
 
 .section-content-list-item {
   width: calc((100% - 72px) / 4);
+  margin-bottom: 8px;
 }
 
 .section-content-list-header {
