--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ img {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
+  align-items: center;
 }
 
 .header-content {
@@ -81,7 +82,11 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   align-items: center;
+}
+.header-navigation-item {
   padding: 24px 0;
+  /* display: block; */
+  margin-right: auto;
 }
 
 .header-navigation:hover,
@@ -91,6 +96,7 @@ img {
 
 .address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .address-menu-list {
@@ -126,7 +132,9 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  padding: 188px 472px 292px 472px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
 }
 
 .hero-button {
@@ -143,6 +151,8 @@ img {
   height: 56px;
   border: none;
   border-radius: 4px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero-button:hover,
@@ -151,7 +161,6 @@ img {
 }
 .section-content {
   background-color: #fff;
-  margin: 120px 156px;
   padding: 120px 0;
 }
 
@@ -184,7 +193,6 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-bottom: 8px;
 }
 
 .section-content-list-paragraph {
@@ -207,12 +215,10 @@ img {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding: 120px 0;
   margin-bottom: 72px;
 }
 
 .section-our-team-list {
-  margin-bottom: 72px;
   display: flex;
   gap: 24px;
 }
@@ -325,4 +331,5 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  width: 264px;
 }
