--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ img {
   align-items: center;
 }
 .header-navigation-item {
+  color: #2e2f42;
   padding: 24px 0;
-  /* display: block; */
   margin-right: auto;
 }
 
